fix : fix the error of make build
