# internal/models/daily_photograph.go
@@ -1,10 +1,9 @@
 package models
 
-import "gorm.io/gorm"
-
 // DailyPhotograph 日常照片
+// @Description 日常照片
 type DailyPhotograph struct {
-	gorm.Model
-	ImageUrl string `json:"image_url"`
-	Title string `json:"title"`
+	SwaggerGormModel `json:",inline"`
+	ImageUrl         string `json:"image_url"`
+	Title            string `json:"title"`
 }
